scripts/resources/raw/yaml/setup/ingresses.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(``) && ((PathPrefix(`/api`) || PathPrefix(`/dashboard`)))
      services:
        - kind: TraefikService
          name: api@internal
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
    - /kafdrop/
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafdrop
  namespace: kafdrop
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(``) && PathPrefix(`/kafdrop`)
      kind: Rule
      services:
        - name: kafka-kafdrop
          port: 9000
          namespace: kafdrop
---
